Added Settings -> Security -> Change pass phrase UI. Refactored code.| #252

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -349,4 +349,5 @@ icelanders prefer real sauna</font>
     <string name="pass_phrase_changed">Pass phrase successfully changed!</string>
     <string name="please_wait_while_pass_phrase_will_be_changed">Changing a pass phrase, please wait</string>
     <string name="backup_options">Backup options</string>
+    <string name="change_pass_phrase">Change pass phrase</string>
 </resources>
