--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -353,4 +353,5 @@ icelanders prefer real sauna</font>
     <string name="account_has_no_associated_keys">This account has no associated keys. Write us at %1$s if you need help</string>
     <string name="pass_phrase_is_too_weak">The pass phrase of some of your key(s) is too weak</string>
     <string name="fix">fix</string>
+    <string name="different_pass_phrases">Your private keys have different pass phrases</string>
 </resources>
