Improved a logic of creating the outgoing messages.| #91

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -367,4 +367,5 @@ icelanders prefer real sauna</font>
     <string name="no">no</string>
     <string name="message_cache_will_be_reloaded">%1$s. The cache will be reloaded</string>
     <string name="can_not_delete_sent_message">Sorry. We can\'t delete a sent message</string>
+    <string name="message_will_be_sent_soon">The message will be sent soon</string>
 </resources>
