--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -368,4 +368,7 @@ icelanders prefer real sauna</font>
     <string name="message_cache_will_be_reloaded">%1$s. The cache will be reloaded</string>
     <string name="can_not_delete_sent_message">Sorry. We can\'t delete a sent message</string>
     <string name="message_will_be_sent_soon">The message will be sent soon</string>
+    <string name="me">me</string>
+    <string name="sending">Sending...</string>
+    <string name="queued">Queued</string>
 </resources>
