--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -369,6 +369,6 @@ icelanders prefer real sauna</font>
     <string name="can_not_delete_sent_message">Sorry. We can\'t delete a sent message</string>
     <string name="message_will_be_sent_soon">The message will be sent soon</string>
     <string name="me">me</string>
-    <string name="sending">Sending...</string>
+    <string name="sending">Sending&#8230;</string>
     <string name="queued">Queued</string>
 </resources>
