Fixed an error when MessagesSenderJobService tries to send not completed messages.| #91

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -374,4 +374,5 @@ icelanders prefer real sauna</font>
     <string name="queued">Queued</string>
     <string name="cash_error">Cash error</string>
     <string name="can_not_delete_sending_message">Sorry. We can\'t delete a message which is sending now</string>
+    <string name="preparing">Preparing&#8230;</string>
 </resources>
