--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -375,4 +375,8 @@ icelanders prefer real sauna</font>
     <string name="cash_error">Cash error</string>
     <string name="can_not_delete_sending_message">Sorry. We can\'t delete a message which is sending now</string>
     <string name="preparing">Preparing&#8230;</string>
+    <string name="gmail_imap_disabled_error" translatable="false">[ALERT] Your account is not enabled for IMAP use. Please visit your Gmail
+        settings page and enable your account for IMAP access. (Failure)</string>
+    <string name="it_seems_imap_access_is_disabled">Could not connect to mail server.\n\nIt seems IMAP access is
+        disabled.\n\nPlease allow IMAP on your Google account.</string>
 </resources>
