--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -372,6 +372,7 @@ icelanders prefer real sauna</font>
     <string name="sending">Sending&#8230;</string>
     <string name="queued">Queued</string>
     <string name="cache_error">Cache error</string>
+    <string name="corrupted">Corrupted</string>
     <string name="can_not_delete_sending_message">Sorry. We can\'t delete a message which is sending now</string>
     <string name="preparing">Preparing&#8230;</string>
     <string name="gmail_imap_disabled_error" translatable="false">[ALERT] Your account is not enabled for IMAP use. Please visit your Gmail
