--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -344,6 +344,7 @@ icelanders prefer real sauna</font>
     <string name="notification_level">Notification level</string>
     <string name="receive_notifications_for">Receive notifications for:</string>
     <string name="no_key_available_for_your_email_account">No key available for your email account. Please write %1$s for help.</string>
+    <string name="no_key_available_for_your_emails">No key available for your email addresses %1$s and %2$s. Please write %3$s for help.</string>
     <string name="done">Done!</string>
     <string name="pass_phrase_changed">Pass phrase successfully changed.</string>
     <string name="back_up_updated_key">You should back up your updated key.</string>
