Fixed NPE in AttachmentDownloadManagerService.| Close #376

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -421,4 +421,6 @@ icelanders prefer real sauna</font>
     <string name="store_space_was_corrupted">App storage space was corrupted. This can happen on certain rooted or unofficial systems, due to user intervention, etc. Write us at %1$s if you need help.</string>
     <string name="wipe_app_settings">Wipe %1$s App storage and set it up again to continue using %1$s on this device.</string>
     <string name="reset_app_storage">Reset app storage</string>
+    <string name="no_message_with_this_attachment">No message with this attachment</string>
+    <string name="attachment_not_found">The attachment not found</string>
 </resources>
