--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -425,4 +425,5 @@ icelanders prefer real sauna</font>
     <string name="attachment_not_found">The attachment not found</string>
     <string name="please_use_another_app_to_choose_file">Please use another app to choose a file</string>
     <string name="file_not_found">File not found</string>
+    <string name="no_pub_keys">There are no public keys</string>
 </resources>
