--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -22,11 +22,7 @@
     <string name="internet_connection_is_not_available">Error: no internet</string>
     <string name="unknown_error">Unknown error</string>
     <string name="message_was_sent">Your message was sent</string>
-    <string name="application_crashed">Application has crashed. You can send a report to the developer.</string>
-    <string name="title_activity_splash">SplashActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="signed_in_fmt">We received access for %1$s</string>
-    <string name="access_denied">Access denied</string>
     <string name="privacy">Privacy</string>
     <string name="terms">Terms</string>
     <string name="security">Security</string>
@@ -57,7 +53,6 @@
     <string name="reply_all">Reply All</string>
     <string name="lock">Lock</string>
     <string name="something_wrong_with_receiving_message">Error: could not receive message</string>
-    <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_login">Sign in</string>
     <string name="please_wait_while_message_will_be_sent">Sending message, please wait</string>
     <string name="please_wait_while_information_about_contacts_will_be_updated">Loading information about contacts, please wait</string>
@@ -79,8 +74,8 @@
     <string name="sources">Sources</string>
     <string name="the_contact_was_deleted">Contact \"%1$s\" deleted</string>
     <string name="the_key_already_added">Key already added, skipping</string>
-    <string name="help_feedback_or_question">Help, feedback or question</string>
-    <string name="i_will_usually_reply_within_an_hour_except_when_i_sleep_tom">I usually reply within an hour. Except when I sleep. (Tom)</string>
+    <string name="help_feedback_or_question">Help, feedback, question</string>
+    <string name="i_will_usually_reply_within_an_hour_except_when_i_sleep_tom">Thank you for trying FlowCrypt! We\'re here to help.</string>
     <string name="your_message">Your message</string>
     <string name="back">Back</string>
     <string name="you_already_sent_this_message">You already sent this message</string>
@@ -225,8 +220,8 @@
     <string name="email_does_not_available_in_this_folder">Message not found, it may have been moved to another folder.</string>
     <string name="from">From</string>
     <string name="google_api_is_not_available">Error: Google API is not available</string>
-    <string name="show_original_message">Show the original message</string>
-    <string name="hide_original_message">Hide the original message</string>
+    <string name="show_original_message">Show original message</string>
+    <string name="hide_original_message">Hide original message</string>
     <string name="import_missing_key">Import missing key</string>
     <string name="security_settings_were_not_implemented_yet">Security Settings were not implemented yet, stay tuned.</string>
     <string name="loading_backups">Loading backups</string>
@@ -245,7 +240,6 @@
         send me a new encrypted message.\n\nThank you</string>
     <string name="please_select_key">Please select a key</string>
     <string name="select_key">Select a key</string>
-    <string name="your_public_key_will_be_appended">Your public key will be appended to the reply message</string>
     <string name="less_secure_login_is_not_allowed">Less secure login is not allowed on your Gmail account. Switching to secure login.</string>
     <string name="error_occurred_try_again_later">An error occurred. Please try again later.</string>
     <string name="progress_message">%1$d\%% %2$s</string>
@@ -301,15 +295,14 @@ icelanders prefer real sauna</font>
         <item quantity="one">%1$d of %2$d keys successfully imported. There is 1 key left. Try a different pass phrase to unlock all keys.</item>
         <item quantity="other">%1$d of %2$d keys successfully imported. There are %3$d key left. Try a different pass phrase to unlock all keys.</item>
     </plurals>
-    <string name="cannot_send_attachment_without_read_permission">The attachment cannot be sent without the read external
-        storage permission</string>
+    <string name="cannot_send_attachment_without_read_permission">Permission to read external storage is needed to send the attachment.</string>
     <string name="hint_when_found_keys_in_email">FlowCrypt found one or more backups of your account key(s).\n\nKey backups are encrypted for your protection. This makes them useless without your pass phrase.\n\nPlease enter pass phrase(s) that you used when the backup was made.</string>
     <string name="forward">Forward</string>
     <string name="forward_encrypted">Forward\nEncrypted</string>
     <string name="reply_encrypted">Reply\nEncrypted</string>
     <string name="reply_all_encrypted">Reply All\nEncrypted</string>
     <string name="forward_template">\n\n---------- Forwarded message ----------\nFrom: %1$s\nDate: %2$s\nSubject: %3$s\nTo: %4$s\n</string>
-    <string name="cannot_forward_html_emails">Cannot forward HTML emails</string>
+    <string name="cannot_forward_html_emails">Cannot forward HTML emails yet</string>
     <string name="cannot_forward_encrypted_attachments">Encrypted attachments are not forwarded. Please attach the files if you want them included.</string>
     <string name="to">To</string>
     <string name="cc">Cc</string>
@@ -366,7 +359,6 @@ icelanders prefer real sauna</font>
     <string name="select_only_one_key">Select a source that stores only one key</string>
     <string name="yes">yes</string>
     <string name="no">no</string>
-    <string name="message_cache_will_be_reloaded">%1$s. The cache will be reloaded</string>
     <string name="can_not_delete_sent_message">Cannot delete sent message</string>
     <string name="no_connection_message_will_be_sent_later">Offline. The message will be sent later</string>
     <string name="me">me</string>
@@ -374,7 +366,7 @@ icelanders prefer real sauna</font>
     <string name="queued">Queued</string>
     <string name="cache_error">Can\'t send message: cache problem</string>
     <string name="corrupted">Corrupted</string>
-    <string name="can_not_delete_sending_message">Sorry. We can\'t delete a message which is sending now</string>
+    <string name="can_not_delete_sending_message">You can\'t delete a message which is now being sent</string>
     <string name="preparing">Preparing&#8230;</string>
     <string name="gmail_imap_disabled_error" translatable="false">[ALERT] Your account is not enabled for IMAP use. Please visit your Gmail
         settings page and enable your account for IMAP access. (Failure)</string>
