--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -396,4 +396,5 @@
     <string name="file_not_found">File not found</string>
     <string name="no_pub_keys">There are no public keys</string>
     <string name="could_not_decrypt_message_due_to_error">Could not decrypt this message due to error:\n\n %1$s </string>
+    <string name="logo">Logo</string>
 </resources>
