--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -205,8 +205,8 @@
     <string name="email_does_not_available_in_this_folder">Message not found, it may have been moved to another folder.</string>
     <string name="from">From</string>
     <string name="google_api_is_not_available">Error: Google API is not available</string>
-    <string name="show_original_message">Show original message</string>
-    <string name="hide_original_message">Hide original message</string>
+    <string name="show_original_message">Show original content</string>
+    <string name="hide_original_message">Hide original content</string>
     <string name="import_missing_key">Import missing key</string>
     <string name="loading_backups">Loading backups</string>
     <string name="submitted_can_receive_encrypted_email">Submitted, can receive encrypted email.</string>
