--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -392,4 +392,8 @@
     <string name="show_cc_bcc">Show CC/BCC</string>
     <string name="opening_password_encrypted_msg_not_implemented_yet">Opening password encrypted messages not
         implemented yet</string>
+    <string name="system">System</string>
+    <string name="system_notifications_notification_chanel">The system notifications channel</string>
+    <string name="warning_passphrase_is_too_weak">Your private key pass phrase is too weak. Please change it in the
+        settings.</string>
 </resources>
