Added clipping a large text when displaying it via WebView.| Close #694

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -397,4 +397,5 @@
     <string name="warning_passphrase_is_too_weak">Your private key pass phrase is too weak. Please change it in the
         settings.</string>
     <string name="please_type_key_id_or_email">Please type key id or email</string>
+    <string name="clipped_message_too_large">[clipped - message too large]</string>
 </resources>
