Added general implementation of a new version of feedback activity.| #680

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -398,4 +398,5 @@
         settings.</string>
     <string name="please_type_key_id_or_email">Please type key id or email</string>
     <string name="clipped_message_too_large">[clipped - message too large]</string>
+    <string name="feedback">Feedback</string>
 </resources>
