--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -399,4 +399,7 @@
     <string name="please_type_key_id_or_email">Please type key id or email</string>
     <string name="clipped_message_too_large">[clipped - message too large]</string>
     <string name="feedback">Feedback</string>
+    <string name="include_app_screenshot">Include app screenshot</string>
+    <string name="touch_to_preview_and_edit">Touch to preview and edit</string>
+    <string name="screenshot">Screenshot</string>
 </resources>
