--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -402,4 +402,5 @@
     <string name="include_app_screenshot">Include app screenshot</string>
     <string name="touch_to_preview_and_edit">Touch to preview and edit</string>
     <string name="screenshot">Screenshot</string>
+    <string name="report_problem">Report problem</string>
 </resources>
